lib/verovio/c_wrapper.h

int vrvToolkit_getPageWithElement(void *tkPtr, const char *xmlId);
double vrvToolkit_getTimeForElement(void *tkPtr, const char *xmlId);
const char *vrvToolkit_getVersion(void *tkPtr);
bool vrvToolkit_loadData(void *tkPtr, const char *data);
bool vrvToolkit_loadZipDataBase64(void *tkPtr, const char *data);
bool vrvToolkit_loadZipDataBuffer(void *tkPtr, const unsigned char *data, int length);
void vrvToolkit_redoLayout(void *tkPtr, const char *c_options);
void vrvToolkit_redoPagePitchPosLayout(void *tkPtr);
const char *vrvToolkit_renderData(void *tkPtr, const char *data, const char *options);
const char *vrvToolkit_renderToExpansionMap(void *tkPtr);
const char *vrvToolkit_renderToMIDI(void *tkPtr, const char *c_options);
const char *vrvToolkit_renderToPAE(void *tkPtr);
const char *vrvToolkit_renderToSVG(void *tkPtr, int page_no, bool xmlDeclaration);
const char *vrvToolkit_renderToTimemap(void *tkPtr, const char *c_options);
void vrvToolkit_resetOptions(void *tkPtr);
void vrvToolkit_resetXmlIdSeed(void *tkPtr, int seed);
bool vrvToolkit_select(void *tkPtr, const char *selection);
bool vrvToolkit_setOptions(void *tkPtr, const char *options);
const char *vrvToolkit_validatePAE(void *tkPtr, const char *data);