lib/verovio/generated_bindings.dart


  late final _vrvToolkit_getPageWithElementPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getPageWithElement>>(
          'vrvToolkit_getPageWithElement');
  late final _vrvToolkit_getPageWithElement = _vrvToolkit_getPageWithElementPtr
      .asFunction<DartVrvToolkit_getPageWithElement>();

  double vrvToolkit_getTimeForElement(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> xmlId,
  ) {
    return _vrvToolkit_getTimeForElement(
      tkPtr,
      xmlId,
    );
  }

  late final _vrvToolkit_getTimeForElementPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getTimeForElement>>(
          'vrvToolkit_getTimeForElement');
  late final _vrvToolkit_getTimeForElement = _vrvToolkit_getTimeForElementPtr
      .asFunction<DartVrvToolkit_getTimeForElement>();

  ffi.Pointer<ffi.Char> vrvToolkit_getVersion(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_getVersion(
      tkPtr,
    );
  }

  late final _vrvToolkit_getVersionPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getVersion>>(
          'vrvToolkit_getVersion');
  late final _vrvToolkit_getVersion =
      _vrvToolkit_getVersionPtr.asFunction<DartVrvToolkit_getVersion>();

  bool vrvToolkit_loadData(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> data,
  ) {
    return _vrvToolkit_loadData(
      tkPtr,
      data,
    );
  }

  late final _vrvToolkit_loadDataPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_loadData>>(
          'vrvToolkit_loadData');
  late final _vrvToolkit_loadData =
      _vrvToolkit_loadDataPtr.asFunction<DartVrvToolkit_loadData>();

  bool vrvToolkit_loadZipDataBase64(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> data,
  ) {
    return _vrvToolkit_loadZipDataBase64(
      tkPtr,
      data,
    );
  }

  late final _vrvToolkit_loadZipDataBase64Ptr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_loadZipDataBase64>>(
          'vrvToolkit_loadZipDataBase64');
  late final _vrvToolkit_loadZipDataBase64 = _vrvToolkit_loadZipDataBase64Ptr
      .asFunction<DartVrvToolkit_loadZipDataBase64>();

  bool vrvToolkit_loadZipDataBuffer(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.UnsignedChar> data,
    int length,
  ) {
    return _vrvToolkit_loadZipDataBuffer(
      tkPtr,
      data,
      length,
    );
  }

  late final _vrvToolkit_loadZipDataBufferPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_loadZipDataBuffer>>(
          'vrvToolkit_loadZipDataBuffer');
  late final _vrvToolkit_loadZipDataBuffer = _vrvToolkit_loadZipDataBufferPtr
      .asFunction<DartVrvToolkit_loadZipDataBuffer>();

  void vrvToolkit_redoLayout(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> c_options,
  ) {
    return _vrvToolkit_redoLayout(
      tkPtr,
      c_options,
    );
  }

  late final _vrvToolkit_redoLayoutPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_redoLayout>>(
          'vrvToolkit_redoLayout');
  late final _vrvToolkit_redoLayout =
      _vrvToolkit_redoLayoutPtr.asFunction<DartVrvToolkit_redoLayout>();

  void vrvToolkit_redoPagePitchPosLayout(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_redoPagePitchPosLayout(
      tkPtr,
    );
  }

  late final _vrvToolkit_redoPagePitchPosLayoutPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_redoPagePitchPosLayout>>(
          'vrvToolkit_redoPagePitchPosLayout');
  late final _vrvToolkit_redoPagePitchPosLayout =
      _vrvToolkit_redoPagePitchPosLayoutPtr
          .asFunction<DartVrvToolkit_redoPagePitchPosLayout>();

  ffi.Pointer<ffi.Char> vrvToolkit_renderData(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> data,
    ffi.Pointer<ffi.Char> options,
  ) {
    return _vrvToolkit_renderData(
      tkPtr,
      data,
      options,
    );
  }

  late final _vrvToolkit_renderDataPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_renderData>>(
          'vrvToolkit_renderData');
  late final _vrvToolkit_renderData =
      _vrvToolkit_renderDataPtr.asFunction<DartVrvToolkit_renderData>();

  ffi.Pointer<ffi.Char> vrvToolkit_renderToExpansionMap(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_renderToExpansionMap(
      tkPtr,
    );
  }

  late final _vrvToolkit_renderToExpansionMapPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_renderToExpansionMap>>(
          'vrvToolkit_renderToExpansionMap');
  late final _vrvToolkit_renderToExpansionMap =
      _vrvToolkit_renderToExpansionMapPtr
          .asFunction<DartVrvToolkit_renderToExpansionMap>();

  ffi.Pointer<ffi.Char> vrvToolkit_renderToMIDI(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> c_options,
  ) {
    return _vrvToolkit_renderToMIDI(
      tkPtr,
      c_options,
    );
  }

  late final _vrvToolkit_renderToMIDIPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_renderToMIDI>>(
          'vrvToolkit_renderToMIDI');
  late final _vrvToolkit_renderToMIDI =
      _vrvToolkit_renderToMIDIPtr.asFunction<DartVrvToolkit_renderToMIDI>();

  ffi.Pointer<ffi.Char> vrvToolkit_renderToPAE(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_renderToPAE(
      tkPtr,
    );
  }

  late final _vrvToolkit_renderToPAEPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_renderToPAE>>(
          'vrvToolkit_renderToPAE');
  late final _vrvToolkit_renderToPAE =
      _vrvToolkit_renderToPAEPtr.asFunction<DartVrvToolkit_renderToPAE>();

  ffi.Pointer<ffi.Char> vrvToolkit_renderToSVG(
    ffi.Pointer<ffi.Void> tkPtr,
    int page_no,
    bool xmlDeclaration,
  ) {
    return _vrvToolkit_renderToSVG(
      tkPtr,
      page_no,
      xmlDeclaration,
    );
  }

  late final _vrvToolkit_renderToSVGPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_renderToSVG>>(
          'vrvToolkit_renderToSVG');
  late final _vrvToolkit_renderToSVG =
      _vrvToolkit_renderToSVGPtr.asFunction<DartVrvToolkit_renderToSVG>();

  ffi.Pointer<ffi.Char> vrvToolkit_renderToTimemap(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> c_options,
  ) {
    return _vrvToolkit_renderToTimemap(
      tkPtr,
      c_options,
    );
  }

  late final _vrvToolkit_renderToTimemapPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_renderToTimemap>>(
          'vrvToolkit_renderToTimemap');
  late final _vrvToolkit_renderToTimemap = _vrvToolkit_renderToTimemapPtr
      .asFunction<DartVrvToolkit_renderToTimemap>();

  void vrvToolkit_resetOptions(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_resetOptions(
      tkPtr,
    );
  }

  late final _vrvToolkit_resetOptionsPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_resetOptions>>(
          'vrvToolkit_resetOptions');
  late final _vrvToolkit_resetOptions =
      _vrvToolkit_resetOptionsPtr.asFunction<DartVrvToolkit_resetOptions>();

  void vrvToolkit_resetXmlIdSeed(
    ffi.Pointer<ffi.Void> tkPtr,
    int seed,
  ) {
    return _vrvToolkit_resetXmlIdSeed(
      tkPtr,
      seed,
    );
  }

  late final _vrvToolkit_resetXmlIdSeedPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_resetXmlIdSeed>>(
          'vrvToolkit_resetXmlIdSeed');
  late final _vrvToolkit_resetXmlIdSeed =
      _vrvToolkit_resetXmlIdSeedPtr.asFunction<DartVrvToolkit_resetXmlIdSeed>();

  bool vrvToolkit_select(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> selection,
  ) {
    return _vrvToolkit_select(
      tkPtr,
      selection,
    );
  }

  late final _vrvToolkit_selectPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_select>>('vrvToolkit_select');
  late final _vrvToolkit_select =
      _vrvToolkit_selectPtr.asFunction<DartVrvToolkit_select>();

  bool vrvToolkit_setOptions(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> options,
  ) {
    return _vrvToolkit_setOptions(
      tkPtr,
      options,
    );
  }

  late final _vrvToolkit_setOptionsPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_setOptions>>(
          'vrvToolkit_setOptions');
  late final _vrvToolkit_setOptions =
      _vrvToolkit_setOptionsPtr.asFunction<DartVrvToolkit_setOptions>();

  ffi.Pointer<ffi.Char> vrvToolkit_validatePAE(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> data,
  ) {
    return _vrvToolkit_validatePAE(
      tkPtr,
      data,
    );
  }

  late final _vrvToolkit_validatePAEPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_validatePAE>>(
          'vrvToolkit_validatePAE');
  late final _vrvToolkit_validatePAE =
      _vrvToolkit_validatePAEPtr.asFunction<DartVrvToolkit_validatePAE>();
}
